--- a/index.html
+++ b/index.html
@@ -70,8 +70,6 @@
         </div>
       </div>
 
-      <!-- ✅ REMOVIDO: Card REGISTROS DE PENDÊNCIAS AGENDADAS -->
-
       <div class="metric-card card-secondary">
         <div class="card-info">
           <h3 class="card-title">REGISTROS DE<br>PENDÊNCIAS<br>CANCELADAS/GERAL</h3>
@@ -91,49 +89,49 @@
     <div class="paineis-distrito-section">
       <h3 class="section-title"><i class="fas fa-map-marked-alt"></i> PAINÉIS DISTRITO</h3>
       <div class="paineis-distrito-grid">
-        <a href="https://compartilhacmc-commits.github.io/distritoeldorado/" target="_blank" class="painel-card painel-sede">
+        <a href="https://regulacaocmceldorado-del.github.io/pendenciaseldorado/" target="_blank" class="painel-card painel-sede">
           <div class="painel-icon"><i class="fas fa-chart-line"></i></div>
           <div class="painel-info"><h4>ELDORADO</h4><p>Acessar Painel</p></div>
           <i class="fas fa-arrow-right painel-arrow"></i>
         </a>
 
-        <a href="https://compartilhacmc-commits.github.io/distritosede/" target="_blank" class="painel-card painel-sede">
+        <a href="https://regulacaocmcsede-star.github.io/pendenciassede/" target="_blank" class="painel-card painel-sede">
           <div class="painel-icon"><i class="fas fa-chart-line"></i></div>
           <div class="painel-info"><h4>SEDE</h4><p>Acessar Painel</p></div>
           <i class="fas fa-arrow-right painel-arrow"></i>
         </a>
 
-        <a href="https://compartilhacmc-commits.github.io/distritovargemdasflores/" target="_blank" class="painel-card painel-sede">
+        <a href="https://regulacaocmcvargem-tech.github.io/pendenciasvargem/" target="_blank" class="painel-card painel-sede">
           <div class="painel-icon"><i class="fas fa-chart-line"></i></div>
           <div class="painel-info"><h4>VARGEM DAS FLORES</h4><p>Acessar Painel</p></div>
           <i class="fas fa-arrow-right painel-arrow"></i>
         </a>
 
-        <a href="https://compartilhacmc-commits.github.io/distritonacional/" target="_blank" class="painel-card painel-sede">
+        <a href="https://regulacaocmcnacional-rgb.github.io/pendenciasnacional/" target="_blank" class="painel-card painel-sede">
           <div class="painel-icon"><i class="fas fa-chart-line"></i></div>
           <div class="painel-info"><h4>NACIONAL</h4><p>Acessar Painel</p></div>
           <i class="fas fa-arrow-right painel-arrow"></i>
         </a>
 
-        <a href="https://compartilhacmc-commits.github.io/distritoressaca/" target="_blank" class="painel-card painel-sede">
+        <a href="https://regulacaocmcressaca-arch.github.io/pendenciasressaca/" target="_blank" class="painel-card painel-sede">
           <div class="painel-icon"><i class="fas fa-chart-line"></i></div>
           <div class="painel-info"><h4>RESSACA</h4><p>Acessar Painel</p></div>
           <i class="fas fa-arrow-right painel-arrow"></i>
         </a>
 
-        <a href="https://compartilhacmc-commits.github.io/distritoindustrial/" target="_blank" class="painel-card painel-sede">
+        <a href="https://regulacaocmcindustrial-code.github.io/pendenciasindustrial/" target="_blank" class="painel-card painel-sede">
           <div class="painel-icon"><i class="fas fa-chart-line"></i></div>
           <div class="painel-info"><h4>INDUSTRIAL</h4><p>Acessar Painel</p></div>
           <i class="fas fa-arrow-right painel-arrow"></i>
         </a>
 
-        <a href="https://compartilhacmc-commits.github.io/distritopetrolandia/" target="_blank" class="painel-card painel-sede">
+        <a href="https://regulacaocmcpetrolandia-collab.github.io/pendenciaspetrolandia/" target="_blank" class="painel-card painel-sede">
           <div class="painel-icon"><i class="fas fa-chart-line"></i></div>
           <div class="painel-info"><h4>PETROLÂNDIA</h4><p>Acessar Painel</p></div>
           <i class="fas fa-arrow-right painel-arrow"></i>
         </a>
 
-        <a href="https://compartilhacmc-commits.github.io/distritoriacho/" target="_blank" class="painel-card painel-sede">
+        <a href="https://regulacaocmcriacho-a11y.github.io/pendenciasriacho/" target="_blank" class="painel-card painel-sede">
           <div class="painel-icon"><i class="fas fa-chart-line"></i></div>
           <div class="painel-info"><h4>RIACHO</h4><p>Acessar Painel</p></div>
           <i class="fas fa-arrow-right painel-arrow"></i>
@@ -391,3 +389,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
