--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Painel de Controle - Distrito Sanitário Eldorado</title>
+  <title>Painel de Controle - Pendências</title>
 
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -13,11 +13,11 @@
   <!-- Cabeçalho com Gradiente -->
   <header class="header">
     <div class="header-content">
-      <h1 class="header-title">DIRETORIA DE REGULAÇÃO</h1>
+      <h1 class="header-title">DIRETORIA DE REGULAÇÃO EM SAÚDE</h1>
       <h2 class="header-subtitle">Controle de Pendências - Sistema Vivver</h2>
       <h3 class="header-subtitle">Central de Marcação de Consultas / Consolidado Geral</h3>
       <p class="footer-credits">Referência Giovanna</p>
-      <p class="footer-credits">Página Criada por Ana P. A. Silva Matr:201704/Assistente Adm. Diretoria de Regulação - Ceaps</p>
+      <p class="footer-credits">Página Criada por Ana P. A. Silva Matr:201704/Assistente Adm. Diretoria de Regulação em Saúde</p>
     </div>
   </header>
 
@@ -370,10 +370,10 @@
 
   <!-- Rodapé -->
   <footer class="footer">
-    <p>DIRETORIA DE REGULAÇÃO</p>
+    <p>DIRETORIA DE REGULAÇÃO EM SAÚDE</p>
     <p>CENTRAL DE MARCAÇÃO DE CONSULTAS</p>
     <p>REFERÊNCIA GIOVANNA</p>
-    <p class="footer-credits">Página Criada por Ana P. A. Silva Matr:201704/Assistente Adm. Diretoria de Regulação - Ceaps</p>
+    <p class="footer-credits">Página Criada por Ana P. A. Silva Matr:201704/Assistente Adm. Diretoria de Regulação em Saúde</p>
   </footer>
 
   <!-- Loading Overlay -->
@@ -389,4 +389,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
