--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1 class="header-title">DIRETORIA DE REGULAÇÃO EM SAÚDE</h1>
       <h2 class="header-subtitle">Controle de Pendências - Sistema Vivver</h2>
       <h3 class="header-subtitle">Central de Marcação de Consultas / Consolidado Geral</h3>
-      <p class="footer-credits">Referência Giovanna</p>
+      <p class="footer-credits">Referência do Setor Enfermeira Giovanna</p>
       <p class="footer-credits">Página Criada por Ana P. A. Silva Matr:201704/Assistente Adm. Diretoria de Regulação em Saúde</p>
     </div>
   </header>
@@ -389,5 +389,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
