--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <!-- Cabeçalho com Gradiente -->
   <header class="header">
     <div class="header-content">
-      <h1 class="header-title">DIRETORIA DE REGULAÇÃO EM SAÚDE</h1>
+      <h1 class="header-title">DIRETORIA DE REGULAÇÃO DO ACESSO</h1>
       <h2 class="header-subtitle">Controle de Pendências - Sistema Vivver</h2>
       <h3 class="header-subtitle">Central de Marcação de Consultas / Consolidado Geral</h3>
       <p class="footer-credits">Referência do Setor Enfermeira Giovanna</p>
-      <p class="footer-credits">Página Criada por Ana P. A. Silva Matr:201704/Assistente Adm. Diretoria de Regulação em Saúde</p>
+      <p class="footer-credits">Página Criada por Ana P. A. Silva Matr:201704/Assistente Adm. Diretoria de Regulação do Acesso</p>
     </div>
   </header>
 
@@ -373,7 +373,7 @@
     <p>DIRETORIA DE REGULAÇÃO EM SAÚDE</p>
     <p>CENTRAL DE MARCAÇÃO DE CONSULTAS</p>
     <p>REFERÊNCIA GIOVANNA</p>
-    <p class="footer-credits">Página Criada por Ana P. A. Silva Matr:201704/Assistente Adm. Diretoria de Regulação em Saúde</p>
+    <p class="footer-credits">Página Criada por Ana P. A. Silva Matr:201704/Assistente Adm. Diretoria de Regulação do Acesso</p>
   </footer>
 
   <!-- Loading Overlay -->
@@ -389,6 +389,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
